--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -9,9 +9,9 @@ on:
       SIMS:   { description: "試行回数/レース", required: true, default: "600", type: string }
       TOPN:   { description: "三連単 TOPN", required: true, default: "18", type: string }
       UNIT:   { description: "1点あたり(円)", required: true, default: "100", type: string }
-      FILTERS: { description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19", required: false, default: "", type: string }
-      KEYMAN:  { description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", required: false, default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", type: string }
-      OUTDIR:  { description: "出力ディレクトリ", required: false, default: "scripts/sims", type: string }
+      FILTERS:{ description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19", required: false, default: "", type: string }
+      KEYMAN: { description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", required: false, default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", type: string }
+      OUTDIR: { description: "出力ディレクトリ", required: false, default: "scripts/sims", type: string }
 
 permissions:
   contents: write
@@ -23,6 +23,7 @@ concurrency:
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -49,8 +50,7 @@ jobs:
             local s="$1"; local prefix="$2"
             IFS=',' read -r -a pairs <<< "$s"
             for kv in "${pairs[@]}"; do
-              kv="$(echo "$kv" | xargs)"
-              [ -z "$kv" ] && continue
+              kv="$(echo "$kv" | xargs)"; [ -z "$kv" ] && continue
               if [[ "$kv" == *"="* ]]; then
                 k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
                 v="$(echo "${kv#*=}" | xargs)"
@@ -58,7 +58,6 @@ jobs:
               fi
             done
           }
-          # filter defaults
           echo "F_REQUIRE_ODDS=false" >> "$GITHUB_OUTPUT"
           echo "F_MIN_EV=0"          >> "$GITHUB_OUTPUT"
           echo "F_ODDS_BANDS="       >> "$GITHUB_OUTPUT"
@@ -68,7 +67,6 @@ jobs:
           echo "F_ONLY_FIRST1=false"    >> "$GITHUB_OUTPUT"
           echo "F_BUY_IN_TOP3=false"    >> "$GITHUB_OUTPUT"
           echo "F_BUY_THR=0.7"          >> "$GITHUB_OUTPUT"
-          # keyman defaults
           echo "K_ENABLE=true"   >> "$GITHUB_OUTPUT"
           echo "K_THR=0.7"       >> "$GITHUB_OUTPUT"
           echo "K_BOOST=0.15"    >> "$GITHUB_OUTPUT"
@@ -76,7 +74,7 @@ jobs:
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
           [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
 
-      - name: Normalize PID (all/空→01..24, カンマ区切り整形)
+      - name: Normalize PID (all/空→01..24, カンマ整形)
         id: pidnorm
         env:
           PID_IN: ${{ inputs.PID }}
@@ -84,25 +82,20 @@ jobs:
           set -euo pipefail
           PID_TRIM="$(echo "${PID_IN:-}" | tr '[:space:]' ' ' | xargs)"
           if [ -z "$PID_TRIM" ] || [ "${PID_TRIM,,}" = "all" ]; then
-            ALL=""
-            for i in $(seq -w 01 24); do ALL="${ALL}${i},"; done
+            ALL=""; for i in $(seq -w 01 24); do ALL="${ALL}${i},"; done
             PID_EXP="${ALL%,}"
           else
             PID_NORM="$(echo "$PID_TRIM" | tr '、，;|' ',')"
             OUT=""
             IFS=',' read -r -a arr <<< "$PID_NORM"
             for p in "${arr[@]}"; do
-              p="$(echo "$p" | xargs)"
-              [ -z "$p" ] && continue
-              printf -v two "%02d" "$p"
-              OUT="${OUT}${two},"
+              p="$(echo "$p" | xargs)"; [ -z "$p" ] && continue
+              printf -v two "%02d" "$p"; OUT="${OUT}${two},"
             done
             PID_EXP="${OUT%,}"
           fi
           echo "PID_EXP=$PID_EXP" | tee -a "$GITHUB_OUTPUT"
-          echo "[pidnorm] => $PID_EXP"
 
-      # 1) Pass1: キーマン抽出（predict-only）
       - name: Run Pass1 (keyman only)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -112,18 +105,12 @@ jobs:
           OUTDIR: ${{ inputs.OUTDIR }}
         run: |
           set -euo pipefail
-          echo "[pass1] DATE=$DATE PID=$PID"
           python scripts/sims/sims.py \
-            --base public \
-            --dates "$DATE" \
-            --pids "$PID" \
-            --sims "$SIMS" \
-            --strategy trifecta_topN --topn "$TOPN" \
-            --predict-only \
-            --outdir "$OUTDIR"
+            --base public --dates "$DATE" --pids "$PID" \
+            --sims "$SIMS" --strategy trifecta_topN --topn "$TOPN" \
+            --predict-only --outdir "$OUTDIR"
 
-      # 2) ML推論（TENKAI）— PIDごと
-      - name: Run TENKAI prediction
+      - name: Run TENKAI prediction (per PID)
         env:
           DATE: ${{ inputs.DATE }}
           PID_EXP: ${{ steps.pidnorm.outputs.PID_EXP }}
@@ -141,7 +128,6 @@ jobs:
         run: |
           find TENKAI/predictions/v1/${{ inputs.DATE }} -maxdepth 4 -type f -name '*.csv' | sort || true
 
-      # 3) Pass2: MLを読み込んだ統合SimS
       - name: Run Pass2 (SimS integrated with ML)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -150,7 +136,6 @@ jobs:
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          # filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -160,30 +145,22 @@ jobs:
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
           F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
           F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
-          # keyman
           K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
           K_THR:    ${{ steps.parse.outputs.K_THR }}
           K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
-          echo "[pass2] MODE=$MODE DATE=$DATE PID=$PID"
-
-          # KEYMAN を無効化する指定が来たら実質無効に
           if [[ "${K_ENABLE,,}" == "false" ]]; then
             K_THR=9.9; K_BOOST=0; K_AGGR=0
           fi
-
           ARGS_COMMON="--base public --dates $DATE --pids $PID \
             --sims $SIMS --topn $TOPN \
             --keyman-threshold $K_THR --keyman-boost $K_BOOST --keyman-aggr $K_AGGR \
-            --ml-root TENKAI/predictions/v1 \
-            --outdir $OUTDIR"
-
+            --ml-root TENKAI/predictions/v1 --outdir $OUTDIR"
           [[ "${F_EXCLUDE_FIRST1,,}" == "true" ]] && ARGS_COMMON="$ARGS_COMMON --exclude-first1"
           [[ "${F_ONLY_FIRST1,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --only-first1"
           [[ "${F_BUY_IN_TOP3,,}"    == "true" ]] && ARGS_COMMON="$ARGS_COMMON --buy-if-keyman-in-top3 --buy-keyman-threshold $F_BUY_THR"
-
           if [[ "$MODE" == "predict" ]]; then
             python scripts/sims/sims_integrated.py $ARGS_COMMON --predict-only
           else
@@ -196,17 +173,14 @@ jobs:
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON --odds-base public/odds/v1 $ARGS_FILTER
           fi
 
-      # 4) 集計（overall.jsonを毎回上書き）
-      - name: Aggregate & write overall.json (overwrite)
+      - name: Aggregate & overwrite overall.json
         env:
           DATE:   ${{ inputs.DATE }}
-          PID:    ${{ steps.pidnorm.outputs.PID_EXP }}
           MODE:   ${{ inputs.MODE }}
           SIMS:   ${{ inputs.SIMS }}
           TOPN:   ${{ inputs.TOPN }}
           UNIT:   ${{ inputs.UNIT }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          # filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -216,73 +190,65 @@ jobs:
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
           F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
           F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
-          # keyman
           K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
           K_THR:    ${{ steps.parse.outputs.K_THR }}
           K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
-          cat > agg_overall.py <<'PY'
+          python - <<'PY'
 import os, json, glob
 
-DATE   = os.environ["DATE"]
-MODE   = os.environ["MODE"]
-SIMS   = int(os.environ["SIMS"])
-TOPN   = int(os.environ["TOPN"])
-UNIT   = int(os.environ["UNIT"])
-OUTDIR = os.environ["OUTDIR"]
+DATE=os.environ["DATE"]; MODE=os.environ["MODE"]
+SIMS=int(os.environ["SIMS"]); TOPN=int(os.environ["TOPN"])
+UNIT=int(os.environ["UNIT"]); OUTDIR=os.environ["OUTDIR"]
 
-F = dict(
-  require_odds = (os.environ.get("F_REQUIRE_ODDS","false").lower()=="true"),
-  min_ev       = float(os.environ.get("F_MIN_EV") or 0),
-  odds_bands   = os.environ.get("F_ODDS_BANDS",""),
-  odds_min     = float(os.environ.get("F_ODDS_MIN") or 0),
-  odds_max     = float(os.environ.get("F_ODDS_MAX") or 0),
-  exclude_first1 = (os.environ.get("F_EXCLUDE_FIRST1","false").lower()=="true"),
-  only_first1    = (os.environ.get("F_ONLY_FIRST1","false").lower()=="true"),
-  buy_in_top3    = (os.environ.get("F_BUY_IN_TOP3","false").lower()=="true"),
-  buy_thr        = float(os.environ.get("F_BUY_THR") or 0.7),
-)
+F={
+ "require_odds": os.environ.get("F_REQUIRE_ODDS","false").lower()=="true",
+ "min_ev": float(os.environ.get("F_MIN_EV") or 0),
+ "odds_bands": os.environ.get("F_ODDS_BANDS",""),
+ "odds_min": float(os.environ.get("F_ODDS_MIN") or 0),
+ "odds_max": float(os.environ.get("F_ODDS_MAX") or 0),
+ "exclude_first1": os.environ.get("F_EXCLUDE_FIRST1","false").lower()=="true",
+ "only_first1": os.environ.get("F_ONLY_FIRST1","false").lower()=="true",
+ "buy_in_top3": os.environ.get("F_BUY_IN_TOP3","false").lower()=="true",
+ "buy_thr": float(os.environ.get("F_BUY_THR") or 0.7),
+}
 
-K_ENABLE = (os.environ.get("K_ENABLE","true").lower()=="true")
-K_THR    = float(os.environ.get("K_THR") or 0.7)
-K_BOOST  = float(os.environ.get("K_BOOST") or 0.15)
-K_AGGR   = float(os.environ.get("K_AGGR") or 0.25)
-if not K_ENABLE:
-  K_THR, K_BOOST, K_AGGR = 9.9, 0.0, 0.0
+K_ENABLE=os.environ.get("K_ENABLE","true").lower()=="true"
+K_THR=float(os.environ.get("K_THR") or 0.7)
+K_BOOST=float(os.environ.get("K_BOOST") or 0.15)
+K_AGGR=float(os.environ.get("K_AGGR") or 0.25)
+if not K_ENABLE: K_THR, K_BOOST, K_AGGR = 9.9, 0.0, 0.0
 
-pred_dir = os.path.join(OUTDIR, "pass2", "predict")
-overall_path = os.path.join(OUTDIR, "pass2", "overall.json")
+pred_dir=os.path.join(OUTDIR,"pass2","predict")
+overall_path=os.path.join(OUTDIR,"pass2","overall.json")
 
 def _norm_race(r): r=(r or "").strip().upper(); return r if (not r or r.endswith("R")) else r+"R"
-def _find_result(date,pid,race):
+def _res(date,pid,race):
   base="public"; root_v1=os.path.join(base,"results","v1")
   root=root_v1 if os.path.isdir(root_v1) else os.path.join(base,"results")
   dirp=os.path.join(root,str(date),str(pid))
-  cand=os.path.join(dirp, f"{_norm_race(race)}.json")
+  cand=os.path.join(dirp,f"{_norm_race(race)}.json")
   if os.path.isfile(cand): return json.load(open(cand,encoding="utf-8"))
   for f in os.listdir(dirp):
     if f.lower().endswith(".json"):
-      data=json.load(open(os.path.join(dirp,f),encoding="utf-8"))
-      cont=data.get("races", data) if isinstance(data,dict) else {}
+      d=json.load(open(os.path.join(dirp,f),encoding="utf-8"))
+      cont=d.get("races",d) if isinstance(d,dict) else {}
       rk=_norm_race(race)
       if rk in cont: return cont[rk]
   return {}
-def _actual_trifecta_and_amount(res_json):
-  trif=(res_json or {}).get("payouts",{}).get("trifecta")
-  combo=None; amt=0
+def _hit(d):
+  trif=(d or {}).get("payouts",{}).get("trifecta")
   if isinstance(trif,dict):
-    combo=trif.get("combo"); amt=int(trif.get("amount") or 0)
-  if not combo and isinstance(res_json,dict):
-    order=res_json.get("order")
-    if isinstance(order,list) and len(order)>=3:
-      def lane(x): return str(x.get("lane") or x.get("course") or x.get("F") or x.get("number"))
-      try:
-        f,s,t=lane(order[0]),lane(order[1]),lane(order[2])
-        if all([f,s,t]): combo=f"{f}-{s}-{t}"
-      except: pass
-  return combo, amt
+    return trif.get("combo"), int(trif.get("amount") or 0)
+  order=(d or {}).get("order")
+  if isinstance(order,list) and len(order)>=3:
+    lane=lambda x: str(x.get("lane") or x.get("course") or x.get("F") or x.get("number"))
+    try:
+      f,s,t=lane(order[0]),lane(order[1]),lane(order[2]); return f"{f}-{s}-{t}", 0
+    except: pass
+  return None, 0
 
 files=sorted(glob.glob(os.path.join(pred_dir,"pred_*_*_*.json")))
 races=len(files); bets_total=0; stake_total=0; hits=0; payout_total=0
@@ -292,29 +258,24 @@ for fp in files:
   bets=len(buylist); bets_total+=bets; stake_total+=bets*UNIT
   if MODE=="eval":
     date, pid, race = d.get("date"), d.get("pid"), d.get("race")
-    res=_find_result(date,pid,race)
-    hit_combo, pay=_actual_trifecta_and_amount(res)
-    if hit_combo and any(hit_combo==it["ticket"] for it in buylist):
+    res=_res(date,pid,race); combo, pay=_hit(res)
+    if combo and any(combo==it["ticket"] for it in buylist):
       hits+=1; payout_total+=int(pay)
-roi=(payout_total-stake_total)/stake_total if (MODE=="eval" and stake_total>0) else 0.0
 
+roi=(payout_total-stake_total)/stake_total if (MODE=="eval" and stake_total>0) else 0.0
 overall={
-  "date": DATE, "mode": MODE, "races": races,
-  "bets_total": bets_total, "unit": UNIT,
-  "stake_total": stake_total, "hits": hits,
-  "hit_rate": (hits/races if races>0 else 0.0),
-  "payout_total": payout_total, "roi": roi,
-  "options": {
-    "sims": SIMS, "topn": TOPN,
-    "filters": F,
-    "keyman": {"enable": K_ENABLE, "threshold": K_THR, "boost": K_BOOST, "aggr": K_AGGR}
-  }
+ "date":DATE,"mode":MODE,"races":races,"bets_total":bets_total,
+ "unit":UNIT,"stake_total":stake_total,"hits":hits,
+ "hit_rate":(hits/races if races>0 else 0.0),
+ "payout_total":payout_total,"roi":roi,
+ "options":{"sims":SIMS,"topn":TOPN,"filters":F,
+            "keyman":{"enable":K_ENABLE,"threshold":K_THR,"boost":K_BOOST,"aggr":K_AGGR}}
 }
 os.makedirs(os.path.dirname(overall_path), exist_ok=True)
-with open(overall_path,"w",encoding="utf-8") as f: json.dump(overall,f,ensure_ascii=False,indent=2)
+with open(overall_path,"w",encoding="utf-8") as f:
+  json.dump(overall,f,ensure_ascii=False,indent=2)
 print(f"[overall] wrote {overall_path}")
 PY
-          python agg_overall.py
 
       - name: Commit results into repo
         if: always()
