--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -17,7 +17,9 @@ on:
         required: true
         default: "predict"
         type: choice
-        options: [predict, eval]
+        options:
+          - predict
+          - eval
       SIMS:
         description: "試行回数/レース"
         required: true
@@ -59,7 +61,6 @@ concurrency:
 jobs:
   run:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -94,6 +95,7 @@ jobs:
               fi
             done
           }
+          # filter defaults
           echo "F_REQUIRE_ODDS=false" >> "$GITHUB_OUTPUT"
           echo "F_MIN_EV=0"          >> "$GITHUB_OUTPUT"
           echo "F_ODDS_BANDS="       >> "$GITHUB_OUTPUT"
@@ -103,6 +105,7 @@ jobs:
           echo "F_ONLY_FIRST1=false"    >> "$GITHUB_OUTPUT"
           echo "F_BUY_IN_TOP3=false"    >> "$GITHUB_OUTPUT"
           echo "F_BUY_THR=0.7"          >> "$GITHUB_OUTPUT"
+          # keyman defaults
           echo "K_ENABLE=true"   >> "$GITHUB_OUTPUT"
           echo "K_THR=0.7"       >> "$GITHUB_OUTPUT"
           echo "K_BOOST=0.15"    >> "$GITHUB_OUTPUT"
@@ -172,6 +175,7 @@ jobs:
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           OUTDIR: ${{ inputs.OUTDIR }}
+          # filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -181,6 +185,7 @@ jobs:
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
           F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
           F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
+          # keyman
           K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
           K_THR:    ${{ steps.parse.outputs.K_THR }}
           K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
@@ -232,7 +237,8 @@ jobs:
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
-          python - <<'PY'
+          mkdir -p "$OUTDIR/pass2"
+          cat > "$OUTDIR/pass2/_agg.py" <<'PY'
 import os, json, glob
 DATE=os.environ["DATE"]; MODE=os.environ["MODE"]
 SIMS=int(os.environ["SIMS"]); TOPN=int(os.environ["TOPN"])
@@ -299,6 +305,7 @@ os.makedirs(os.path.dirname(overall_path), exist_ok=True)
 json.dump(overall, open(overall_path,"w",encoding="utf-8"), ensure_ascii=False, indent=2)
 print(f"[overall] wrote {overall_path}")
 PY
+          python "$OUTDIR/pass2/_agg.py"
 
       - name: Commit results into repo
         if: always()
