--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -61,6 +61,7 @@ concurrency:
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -87,7 +88,8 @@ jobs:
             local s="$1"; local prefix="$2"
             IFS=',' read -r -a pairs <<< "$s"
             for kv in "${pairs[@]}"; do
-              kv="$(echo "$kv" | xargs)"; [ -z "$kv" ] && continue
+              kv="$(echo "$kv" | xargs)"
+              [ -z "$kv" ] && continue
               if [[ "$kv" == *"="* ]]; then
                 k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
                 v="$(echo "${kv#*=}" | xargs)"
@@ -95,7 +97,6 @@ jobs:
               fi
             done
           }
-          # filter defaults
           echo "F_REQUIRE_ODDS=false" >> "$GITHUB_OUTPUT"
           echo "F_MIN_EV=0"          >> "$GITHUB_OUTPUT"
           echo "F_ODDS_BANDS="       >> "$GITHUB_OUTPUT"
@@ -105,7 +106,6 @@ jobs:
           echo "F_ONLY_FIRST1=false"    >> "$GITHUB_OUTPUT"
           echo "F_BUY_IN_TOP3=false"    >> "$GITHUB_OUTPUT"
           echo "F_BUY_THR=0.7"          >> "$GITHUB_OUTPUT"
-          # keyman defaults
           echo "K_ENABLE=true"   >> "$GITHUB_OUTPUT"
           echo "K_THR=0.7"       >> "$GITHUB_OUTPUT"
           echo "K_BOOST=0.15"    >> "$GITHUB_OUTPUT"
@@ -121,7 +121,8 @@ jobs:
           set -euo pipefail
           PID_TRIM="$(echo "${PID_IN:-}" | tr '[:space:]' ' ' | xargs)"
           if [ -z "$PID_TRIM" ] || [ "${PID_TRIM,,}" = "all" ]; then
-            ALL=""; for i in $(seq -w 01 24); do ALL="${ALL}${i},"; done
+            ALL=""
+            for i in $(seq -w 01 24); do ALL="${ALL}${i},"; done
             PID_EXP="${ALL%,}"
           else
             PID_NORM="$(echo "$PID_TRIM" | tr '、，;|' ',')"
@@ -129,7 +130,8 @@ jobs:
             IFS=',' read -r -a arr <<< "$PID_NORM"
             for p in "${arr[@]}"; do
               p="$(echo "$p" | xargs)"; [ -z "$p" ] && continue
-              printf -v two "%02d" "$p"; OUT="${OUT}${two},"
+              printf -v two "%02d" "$p"
+              OUT="${OUT}${two},"
             done
             PID_EXP="${OUT%,}"
           fi
@@ -151,7 +153,7 @@ jobs:
 
       - name: Run TENKAI prediction (per PID)
         env:
-          DATE: ${{ inputs.DATE }}
+          DATE:   ${{ inputs.DATE }}
           PID_EXP: ${{ steps.pidnorm.outputs.PID_EXP }}
         run: |
           set -euo pipefail
@@ -159,7 +161,6 @@ jobs:
           IFS=',' read -r -a PIDS <<< "$PID_EXP"
           for P in "${PIDS[@]}"; do
             P="$(echo "$P" | xargs)"; [ -z "$P" ] && continue
-            echo "[tenkai] $DATE / $P"
             python TENKAI/tenkai_predict_integrated.py --date "$DATE" --pid "$P"
           done
 
@@ -175,7 +176,6 @@ jobs:
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           OUTDIR: ${{ inputs.OUTDIR }}
-          # filters
           F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
           F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
           F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
@@ -185,7 +185,6 @@ jobs:
           F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
           F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
           F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
-          # keyman
           K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
           K_THR:    ${{ steps.parse.outputs.K_THR }}
           K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
@@ -214,7 +213,7 @@ jobs:
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON --odds-base public/odds/v1 $ARGS_FILTER
           fi
 
-      - name: Aggregate & overwrite overall.json
+      - name: Aggregate and overwrite overall.json
         env:
           DATE:   ${{ inputs.DATE }}
           MODE:   ${{ inputs.MODE }}
